@@ -1,8 +1,17 @@
 package io.javaoperatorsdk.operator.processing.dependent.kubernetes;
 
-import java.util.*;
+import java.util.AbstractMap;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.Set;
+import java.util.SortedMap;
+import java.util.TreeMap;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -22,7 +31,7 @@ import io.javaoperatorsdk.operator.processing.LoggingUtils;
  * <p>
  * The basis of algorithm is to extract the fields managed we convert resources to Map/List
  * composition. The actual resource (from the server) is pruned, all the fields which are not
- * mentioed in managedFields of the target manager is removed. Some irrelevant fields are also
+ * mentioned in managedFields of the target manager is removed. Some irrelevant fields are also
  * removed from desired. And the two resulted Maps are compared for equality. The implementation is
  * a bit nasty since have to deal with some specific cases of managedFields format.
  * </p>
@@ -104,10 +113,8 @@ public class SSABasedGenericKubernetesResourceMatcher<R extends HasMetadata> {
   /**
    * Correct for known issue with SSA
    */
-  @SuppressWarnings("unchecked")
   private void sanitizeState(R actual, R desired, Map<String, Object> actualMap) {
-    if (desired instanceof StatefulSet) {
-      StatefulSet desiredStatefulSet = (StatefulSet) desired;
+    if (desired instanceof StatefulSet desiredStatefulSet) {
       StatefulSet actualStatefulSet = (StatefulSet) actual;
       int claims = desiredStatefulSet.getSpec().getVolumeClaimTemplates().size();
       if (claims == actualStatefulSet.getSpec().getVolumeClaimTemplates().size()) {
@@ -321,12 +328,12 @@ public class SSABasedGenericKubernetesResourceMatcher<R extends HasMetadata> {
     }
     if (possibleTargets.isEmpty()) {
       throw new IllegalStateException("Cannot find list element for key:" + key + ", in map: "
-          + values.stream().map(Map::keySet).collect(Collectors.toList()));
+          + values.stream().map(Map::keySet).toList());
     }
     if (possibleTargets.size() > 1) {
       throw new IllegalStateException(
           "More targets found in list element for key:" + key + ", in map: "
-              + values.stream().map(Map::keySet).collect(Collectors.toList()));
+              + values.stream().map(Map::keySet).toList());
     }
     final var finalIndex = index;
     return new AbstractMap.SimpleEntry<>(finalIndex, possibleTargets.get(0));
@@ -339,7 +346,7 @@ public class SSABasedGenericKubernetesResourceMatcher<R extends HasMetadata> {
         // field manager name.
         .filter(
             f -> f.getManager().equals(fieldManager) && f.getOperation().equals(APPLY_OPERATION))
-        .collect(Collectors.toList());
+        .toList();
     if (targetManagedFields.isEmpty()) {
       log.debug("No field manager exists for resource {} with name: {} and operation Apply ",
           actual.getKind(),
